--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,11 @@
   font-weight: 400;
   color: var(--primary-text-color);
   background-color: var(--basic-white);
+
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
 }
 
 a {
@@ -80,6 +85,11 @@ img {
 h1 {
   margin: 0;
   background-color: var(--basic-light-grey);
+}
+
+/* grid */
+.page {
+  height: 100%;
 }
 
 
@@ -157,25 +167,40 @@ h1 {
   border-radius: 3px;}
 
 /* navigation */
-.main-navigation {
+.header-bar {
+  background-color: var(--basic-light-grey)
+}
+
+.main-navigation-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr min-content;
+}
+
+.main-nav {
   margin: 0;
+  padding: 0;
   font-weight: 500;
   font-size: 16px;
   line-height: 30px;
   text-transform: uppercase;
   color: var(--primary-text-color);
-  background-color: var(--basic-light-grey);
+
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+}
+
+.main-header-logo {
 }
 
 .main-header-logo,
-.site-navigation a {
+.site-nav-link {
   color: var(--primary-text-color);
 
 }
 
-.site-navigation {
+.site-nav {
   margin: 0;
-  padding: auto;
+  padding: 0;
   list-style: none;
 }
 
@@ -183,29 +208,37 @@ h1 {
   opacity: 70%;
 }
 
-.cart a {
+.cart {
+}
+
+.cart-link {
   text-decoration: none;
   color: inherit;
 }
 
-.site-navigation a:hover,
-.cart a:hover {
+.site-nav-link:hover,
+.cart-link:hover {
   color: var(--button-red);
 }
 
 .main-header-logo:active,
-.site-navigation a:active,
-.cart a:active {
+.site-nav-link:active,
+.cart-link:active {
   color: var(--primary-text-color);
   opacity: 30%;
 }
 
-.site-navigation a:target,
-.cart a:target {
+.site-nav-link:target,
+.cart-link:target {
   border-bottom: 2px solid var(--button-light-red);
 }
 
 /*index*/
+.container {
+  width: 1160px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
 /* services-header */
 .services-heading {
   background-color: var(--basic-light-grey)
@@ -226,8 +259,19 @@ h1 {
 }
 
 /* services-descripton */
+.services-description {
+  margin-bottom: 80px;
+
+}
+
 .services-list {
+  margin: 0;
+  padding: 0;
   list-style: none;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 100px;
 }
 
 .services-descripton h2 {
@@ -242,6 +286,11 @@ h1 {
 }
 
 /* about-company */
+.about-stats-company {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+}
+
 .about-company,
 .stats-company {
   color: var(--secondary-text-color);
@@ -280,6 +329,8 @@ h1 {
 /* products */
 .products-list {
   list-style: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .products-item {
@@ -359,26 +410,59 @@ h1 {
 }
 
 /* footer */
+.container-footer {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
 .social-links-list {
   list-style: none;
+  margin: 0;
+  padding: 0 20px;
+
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+
+.social-links-item {
+  margin: 0 20px;
 }
 
 .social-links-button {
-  background: linear-gradient(0deg, var(--social-link-grey), var(--social-link-grey)), var(--basic-white);
+  width: 81px;
+  height: 81px;
+  background: var(--social-link-grey);
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 50%;
+
+  display: block;
+}
+
+.social-links-button-vk {
+  background-image: url(../img/icons/icon-vk.svg);
+}
+
+.social-links-button-fb {
+  background-image: url(../img/icons/icon-fb.svg);
+}
+
+.social-links-button-insta {
+  background-image: url(../img/icons/icon-insta.svg);
 }
 
 .social-links-button:hover {
-  background: linear-gradient(0deg, var(--button-red), var(--button-red)), var(--basic-white);
+  background-color: var(--button-red);
 }
 
 .social-links-button:active {
-  background: linear-gradient(0deg, var(--button-dark-red), var(--button-dark-red)), var(--basic-white);
+  background-color: var(--button-dark-red);
   box-shadow: 0px 3px 0px 0px #000101 10 % inset;
 }
 
-.social-links-button img:active {
+/* .social-links-button:active {
   opacity: 0.3;
-}
+} */
 
 .footer-discount-heading {
   font-weight: 700;
@@ -394,6 +478,15 @@ h1 {
 
 
 /* catalog */
+.catalog-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+.filter-container {
+  grid-row: 1/-1;
+}
+
 .catalog-header {
   color: var(--primary-text-color);
   font-weight: 500;
@@ -434,6 +527,11 @@ h1 {
   font-weight: 700;
   font-size: 18px;
   line-height: 30px;
+}
+
+.filter-sort {
+  display: grid;
+
 }
 
 .filter ul,
