--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ h1 {
 
 /* navigation */
 .header-bar {
-  background-color: var(--basic-light-grey)
+  background-color: var(--basic-light-grey);
 }
 
 .main-navigation-wrapper {
@@ -185,11 +185,10 @@ h1 {
   text-transform: uppercase;
   color: var(--primary-text-color);
 
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
 }
 
 .main-header-logo {
+  padding-left: 140px;
 }
 
 .main-header-logo,
@@ -204,11 +203,16 @@ h1 {
   list-style: none;
 }
 
+.site-nav-item{
+    display: inline;
+}
+
 .main-header-logo:hover {
   opacity: 70%;
 }
 
 .cart {
+  padding-right: 140px;
 }
 
 .cart-link {
@@ -239,6 +243,14 @@ h1 {
   margin: 0 auto;
   padding: 0 10px;
 }
+
+.catalog-header {
+  background-color: var(--basic-light-grey);
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
 /* services-header */
 .services-heading {
   background-color: var(--basic-light-grey)
@@ -480,10 +492,12 @@ h1 {
 /* catalog */
 .catalog-container {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: auto 2fr;
 }
 
 .filter-container {
+  margin: 0;
+  padding: 0;
   grid-row: 1/-1;
 }
 
@@ -496,6 +510,8 @@ h1 {
 
 .catalog-list {
   list-style: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 .catalog-item a:hover {
@@ -527,10 +543,13 @@ h1 {
   font-weight: 700;
   font-size: 18px;
   line-height: 30px;
+  margin: 0;
+  padding: 0;
 }
 
 .filter-sort {
   display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 
 }
 
@@ -544,6 +563,10 @@ h1 {
   font-size: 16px;
   line-height: 22px;
   text-transform: uppercase;
+}
+
+.filter-cost input {
+  width: 80px;
 }
 
 .filter-option input {
@@ -567,6 +590,10 @@ h1 {
   opacity: 0.3;
 }
 
+.filter-sort-option {
+  display: inline;
+}
+
 .filter-sort-option a {
   color: var(--primary-text-color);
   opacity: 0.3;
@@ -583,4 +610,8 @@ h1 {
 /* catalog-navigation */
 .pagination-list {
   list-style: none;
+}
+
+.pagination-item {
+  display: inline;
 }
