--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@
   --button-pages-border: #DBDBDB;
 
   --modal-grey: #666;
-  --range-grey: #ABABAB;
+  --range-grey-point: #ABABAB;
   --filter-grey: #4D4D4D;
   --social-link-grey: #E1E1E1;
   --footer-grey: #444;
@@ -63,6 +63,9 @@
   --filter-sort-hover: rgba(0, 0, 0, 0.6);
   --catalog-img-bg: #F2F2F2;
   --catalog-img-border: rgba(0, 0, 0, 0.1);
+  --slider-controls-current: #C1C1C1;
+  --range-grey: #D7DCDF;
+  --range-shadow: rgba(0, 0, 0, 0.15);
 
 }
 
@@ -416,12 +419,6 @@ h1 {
   z-index: 6;
 }
 
-/* WARNING:
-.slider-controls .current {
-  display: block;
-}
-*/
-
 .slider-controls-button {
   display: flex;
   justify-content: center;
@@ -434,14 +431,15 @@ h1 {
   border-radius: 50%;
 }
 
-.slider-controls-button span {
-  display: none;
-
-  height: 6px;
-  width: 6px;
-  background-color: transparent;
+.slider-controls-button:first-child::before {
+  position: absolute;
+  content: "";
+  top: 5px;
+  left: 5px;
+  width: 4px;
+  height: 4px;
   border-radius: 50%;
-  border: 2px solid var(--basic-light-grey);
+  border: 2px solid var(--slider-controls-current);
 }
 
 /* services-descripton */
@@ -834,29 +832,72 @@ h1 {
 }
 
 .catalog-item {
-  width: 360px;
+  width: 358px;
+  padding-top: 40px;
   margin-bottom: 31px;
   position: relative;
 }
 
-.catalog-item:not(:first-child) svg {
+.catalog-item:first-child::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 40px;
+  top: -6px;
+
+  background-color: var(--filter-grey);
+  opacity: 1;
+}
+
+.catalog-item:not(:first-child)::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 40px;
+  top: -6px;
+
+  background-color: var(--filter-grey);
   opacity: 0.12;
 }
 
-.catalog-item:hover svg {
+.catalog-item:hover:not(:first-child)::before {
   opacity: 1;
 }
+
+.catalog-item::before {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.catalog-item::after {
+  position: absolute;
+  content: "";
+  width: 14px;
+  height: 14px;
+  top: 10px;
+  left: 15px;
+
+  border-radius: 50%;
+  background-color: var(--basic-white);
+  box-shadow: 23px 0 0 0 var(--basic-white),46px 0 0 0 var(--basic-white);
+}
+/* .catalog-item:hover svg {
+  opacity: 1;
+} */
 
 .catalog-item img {
   margin-top: -7px;
   background: var(--catalog-img-bg);
-  border: 1px solid var(--catalog-img-border);
+  border-width: 1px;
+  border-style: solid;
+  border-color: var(--catalog-img-border);
   box-sizing: border-box;
   border-radius: 5px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
-.catalog-item:hover img {
-  border: 0;
+.catalog-item:hover .catalog-item-popup {
   filter: drop-shadow(0px 6px 15px var(--catalog-item-hover-shadow));
 }
 
@@ -935,13 +976,44 @@ fieldset {
 }
 
 .worth-range {
-  margin-top: 48px;
-  width: 260px;
-  height: 80px;
-
+  position: relative;
+  margin-bottom: 14px;
+  padding: 39px 22px 39px 33px;
   background-color: var(--basic-light-grey);
-  border: 1px solid var(--basic-light-grey);
   border-radius: 3px;
+}
+
+.range {
+  height: 2px;
+  width: 205px;
+
+  background: var(--range-grey);
+}
+
+.range-scroll {
+  width: 138px;
+  height: 2px;
+
+  background: var(--button-light-green);
+}
+
+.range-radio {
+  box-sizing: content-box;
+  padding: 0;
+  position: absolute;
+  top: 30px;
+  left: 20px;
+  width: 4px;
+  height: 4px;
+
+  border: 8px solid var(--basic-white);
+  background-color: var(--range-grey-point);
+  border-radius: 50%;
+  box-shadow: 0 2px 1px var(--range-shadow);
+}
+
+.range-radio-right {
+  left: 160px;
 }
 
 .filter-cost {
@@ -976,12 +1048,101 @@ fieldset:last-of-type {
   margin-bottom: 17px;
 }
 
+.filter-input-radio+label {
+  position: relative;
+  margin-left: 36px;
+}
 
+.filter-input-radio+label::before {
+  content: " ";
+  position: absolute;
+  left: -37px;
+  width: 17px;
+  height: 17px;
+  border: 4px solid;
+  border-color: var(--filter-grey);
+  border-radius: 50%;
+  opacity: .4;
+}
+
+.filter-input-radio:checked+label::after {
+  content: "";
+  position: absolute;
+  top: 6px;
+  left: -29px;
+  width: 9px;
+  height: 9px;
+  background-color: var(--filter-grey);
+  border-radius: 50%;
+  opacity: .4;
+}
+
+.filter-input-radio+label:hover::before,
+.filter-input-radio:checked+label:hover::after {
+  opacity: 1;
+}
+
+.filter-input-radio:disabled::before,
+.filter-input-radio:checked:disabled::after {
+  opacity: 0.1;
+}
+
+.filter-input-radio label:disabled,
+.filter-input-radio:checked label:disabled {
+  opacity: 0.3;
+}
+
+.filter-input-checkbox+label {
+  position: relative;
+  margin-left: 36px;
+}
+
+.filter-input-checkbox+label::before {
+  content: " ";
+  position: absolute;
+  left: -37px;
+  width: 17px;
+  height: 17px;
+  border: 4px solid;
+  border-color: var(--filter-grey);
+  border-radius: 4px;
+  opacity: .4;
+}
+
+.filter-input-checkbox:checked+label::after {
+  width: 7px;
+  height: 15px;
+  border: solid var(--filter-grey);
+  border-width: 0 5px 5px 0;
+  transform: rotate( 45deg);
+
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: -28px;
+  opacity: .4;
+}
+
+.filter-input-checkbox+label:hover::before,
+.filter-input-checkbox:checked+label:hover::after {
+  opacity: 1;
+}
+
+.filter-input-checkbox:disabled::before,
+.filter-input-radiocheckbox:checked:disabled::after {
+  opacity: 0.1;
+}
+
+.filter-input-checkbox label:disabled,
+.filter-input-checkbox:checked label:disabled {
+  opacity: 0.3;
+}
 
 .filter-sort {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
+  align-items: center;
 
   max-width: 760px;
 }
@@ -1014,25 +1175,8 @@ fieldset:last-of-type {
   border-radius: 3px;
 }
 
-.filter-option input {
-  color: var(--filter-grey);
-  opacity: 0.4;
-}
-
-.filter-option input:hover {
-  opacity: 1;
-}
-
-.filter-option input:disabled {
-  opacity: 0.1;
-}
-
 .filter-option label {
   color: var(--secondary-text-color);
-}
-
-.filter-option label:disabled {
-  opacity: 0.3;
 }
 
 .filter-sort-option:not(:last-of-type) {
